# phasta

./: CMakeLists.txt
phSolver/compressible/: itrdrv.f
phSolver/incompressible/: CMakeLists.txt  itrdrv.f
phastaIO/: CMakeLists.txt  CatalystAdaptor.cc  SENSEIAdaptor.cc  SENSEIAdaptor.h  SENSEIBridge.cc  SENSEIBridge.h
